--- a/build.gradle
+++ b/build.gradle
@@ -24,3 +24,20 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext{
+    //Kotlin Version
+    coreVersion = '1.5.0'
+    appCompatVersion = '1.3.0'
+
+    //UI Version
+    materialVersion = '1.3.0'
+    constraintLayoutVersion = '2.0.4'
+    circleImageVersion = '3.1.0'
+    viewPager2Version = '1.0.0'
+
+    //Testing Version
+    junitImpVersion = '4.13.2'
+    junitTestVersion = '1.1.2'
+    espressoVersion = '3.3.0'
+}
