--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CitorApp">
-        <activity android:name=".ProfileTestActivity">
-
-        </activity>
+        <activity android:name=".auth.login.EmailConfirmActivity" />
+        <activity android:name=".ProfileTestActivity" />
         <activity
-            android:name=".AuthActivity"
+            android:name=".auth.AuthActivity"
             android:windowSoftInputMode="stateHidden|adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,10 +20,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".WasherProfileActivity">
-
-        </activity>
-        <activity android:name=".login.OtpInputActivity" />
+        <activity android:name=".detailVendor.DetailVendorActivity" />
+        <activity android:name=".auth.login.OtpInputActivity" />
     </application>
 
 </manifest>
