--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ ext{
     constraintLayoutVersion = '2.0.4'
     circleImageVersion = '3.1.0'
     viewPager2Version = '1.0.0'
+    lottieVersion = '3.7.0'
 
     //Testing Version
     junitImpVersion = '4.13.2'
