--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,10 @@ dependencies {
     implementation "de.hdodenhof:circleimageview:$circleImageVersion"
     implementation "androidx.viewpager2:viewpager2:$viewPager2Version"
     implementation "com.airbnb.android:lottie:$lottieVersion"
+
+    //recyclerview & card view
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'com.google.android.material:material:1.3.0'
 }
