--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,21 +9,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CitorApp">
-        <activity android:name=".home.detailVendor.BookingActivity" />
+        <activity android:name=".home.detailBooking.BookingActivity"></activity>
         <activity
             android:name=".MainActivity"
-            android:label="@string/title_activity_main" />
-        <activity android:name=".auth.login.EmailConfirmActivity" />
-        <activity android:name=".ProfileTestActivity" />
-        <activity
-            android:name=".auth.AuthActivity"
-            android:windowSoftInputMode="stateHidden|adjustPan">
+            android:label="@string/title_activity_main">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".auth.login.EmailConfirmActivity" />
+        <activity android:name=".ProfileTestActivity" />
+        <activity
+            android:name=".auth.AuthActivity"
+            android:windowSoftInputMode="stateHidden|adjustPan"></activity>
         <activity android:name=".home.detailVendor.DetailVendorActivity" />
         <activity android:name=".auth.login.OtpInputActivity" />
     </application>
