--- a/appmitra/src/main/AndroidManifest.xml
+++ b/appmitra/src/main/AndroidManifest.xml
@@ -9,15 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CitorApp">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity" />
+        <activity android:name=".auth.AuthActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".auth.AuthActivity"/>
-        <activity android:name=".auth.login.OtpInputActivity"/>
-        <activity android:name=".auth.register.EmailConfirmActivity"/>
+        <activity android:name=".auth.login.OtpInputActivity" />
+        <activity android:name=".auth.register.EmailConfirmActivity" />
     </application>
 
 </manifest>
