--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.citor.app">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,17 +13,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CitorApp"
         tools:replace="android:allowBackup">
-
-        <activity android:name="com.citor.app.home.searchVendor.SearchVendorActivity">
-
-        </activity>
+        <activity android:name=".home.payment.MidtransActivity"></activity>
+        <activity android:name=".home.searchVendor.SearchVendorActivity"></activity>
         <activity
-            android:name="com.citor.app.MainActivity"
+            android:name=".MainActivity"
             android:label="@string/title_activity_main" />
-        <activity android:name="com.citor.app.auth.register.EmailConfirmActivity" />
-        <activity android:name="com.citor.app.ProfileTestActivity" />
+        <activity android:name=".auth.register.EmailConfirmActivity" />
+        <activity android:name=".ProfileTestActivity" />
         <activity
-            android:name="com.citor.app.auth.AuthActivity"
+            android:name=".auth.AuthActivity"
             android:windowSoftInputMode="stateHidden|adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -29,10 +29,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.citor.app.home.detailVendor.DetailVendorActivity" />
-        <activity android:name="com.citor.app.auth.login.OtpInputActivity" />
-        <activity android:name="com.citor.app.home.detailBooking.BookingActivity" />
-        <activity android:name="com.citor.app.home.payment.FixPaymentActivity" />
+        <activity android:name=".home.detailVendor.DetailVendorActivity" />
+        <activity android:name=".auth.login.OtpInputActivity" />
+        <activity android:name=".home.detailBooking.BookingActivity" />
+        <activity android:name=".home.payment.FixPaymentActivity" />
     </application>
 
 </manifest>
