--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     implementation "de.hdodenhof:circleimageview:$circleImageVersion"
     implementation "androidx.viewpager2:viewpager2:$viewPager2Version"
     implementation "com.airbnb.android:lottie:$lottieVersion"
+    implementation "com.google.android.gms:play-services-location:$locationVersion"
 
     //recyclerview & card view
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
