--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
     package="com.citor.app">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -13,8 +15,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CitorApp"
         tools:replace="android:allowBackup">
-<!--        <activity android:name=".home.payment.MidtransActivity" />-->
-        <activity android:name=".home.searchVendor.SearchVendorActivity" />
+        <!--        <activity android:name=".home.payment.MidtransActivity" />-->
+
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyBpAWgYvdmYEfh5CNLEjnVqC5zx3xxC1_k" />
+
+        <activity
+            android:name=".home.searchVendor.SearchVendorActivity"
+            android:windowSoftInputMode="stateHidden|adjustPan" />
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main" />
