--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ ext {
     //Kotlin Version
     coreVersion = '1.5.0'
     appCompatVersion = '1.3.0'
+    locationVersion = '18.0.0'
 
     //UI Version
     materialVersion = '1.3.0'
