--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,4 +101,9 @@ dependencies {
     // For using the Midtrans Sandbox
     implementation 'com.midtrans:uikit:1.28.0-SANDBOX'
     sandboxImplementation 'com.midtrans:uikit:1.28.0-SANDBOX'
+
+    // For pict image
+    implementation 'com.github.dhaval2404:imagepicker-support:1.7.1'
+    implementation 'com.github.florent37:inline-activity-result-kotlin:1.0.4'
+    implementation 'com.makeramen:roundedimageview:2.3.0'
 }
