--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CitorApp"
         tools:replace="android:allowBackup">
-        <!--        <activity android:name=".home.payment.MidtransActivity" />-->
-
+        <activity android:name=".profile.EditProfileActivity"></activity>
+        <!-- <activity android:name=".home.payment.MidtransActivity" /> -->
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyBpAWgYvdmYEfh5CNLEjnVqC5zx3xxC1_k" />
@@ -48,6 +48,7 @@
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
+
     </application>
 
 </manifest>
