--- a/appmitra/src/main/AndroidManifest.xml
+++ b/appmitra/src/main/AndroidManifest.xml
@@ -9,17 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.CitorApp">
-        <activity android:name="com.citor.mitra.ServiceActivity"></activity>
-        <activity android:name="com.citor.mitra.MainActivity" />
-        <activity android:name="com.citor.mitra.auth.AuthActivity">
+        <activity android:name=".ServiceActivity" />
+        <activity android:name=".MainActivity" />
+        <activity android:name=".auth.AuthActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.citor.mitra.auth.login.OtpInputActivity" />
-        <activity android:name="com.citor.mitra.auth.register.EmailConfirmActivity" />
+        <activity android:name=".auth.login.OtpInputActivity" />
+        <activity android:name=".auth.register.EmailConfirmActivity" />
     </application>
 
 </manifest>
