--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,8 @@ dependencies {
     implementation "de.hdodenhof:circleimageview:$circleImageVersion"
     implementation "androidx.viewpager2:viewpager2:$viewPager2Version"
     implementation "com.airbnb.android:lottie:$lottieVersion"
+
+    //service location
     implementation "com.google.android.gms:play-services-location:$locationVersion"
 
     //recyclerview & card view
