--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CitorApp"
         tools:replace="android:allowBackup">
-        <activity android:name=".profile.TermsConditionActivity"></activity>
+        <activity android:name=".profile.PrivacyPolicyActivity"></activity>
+        <activity android:name=".profile.TermsConditionActivity" />
         <activity android:name=".profile.SupportActivity" />
         <activity android:name=".profile.EditPassActivity" />
         <activity android:name=".profile.EditProfileActivity" />
